Fixed colouring issue so things are more visible

--- a/css/general.css
+++ b/css/general.css
@@ -164,7 +164,7 @@ body {
   display: block;
   font-size: 1.6rem;
   font-weight: 500;
-  color: #cf711f;
+  color: black;
   text-transform: uppercase;
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
@@ -193,13 +193,13 @@ body {
 
 .btn--full:link,
 .btn--full:visited {
-  background-color: #e67e22;
+  background-color: #008080;
   color: #fff;
 }
 
 .btn--full:hover,
 .btn--full:active {
-  background-color: #cf711f;
+  background-color: #008080;
 }
 
 .btn--outline:link,
@@ -219,7 +219,7 @@ body {
 }
 
 .btn--form {
-  background-color: #45260a;
+  background-color: #004040;
   color: #fdf2e9;
   align-self: end;
   padding: 1.2rem;
@@ -233,7 +233,7 @@ body {
 .link:link,
 .link:visited {
   display: inline-block;
-  color: #e67e22;
+  color: #006666;
   text-decoration: none;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
@@ -264,7 +264,7 @@ body {
 .list-icon {
   width: 3rem;
   height: 3rem;
-  color: #e67e22;
+  color: #006666;
 }
 
 *:focus {
